--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -1,7 +1,7 @@
 on:
   schedule:
     # At 01:00.
-    - cron:  '53 12 * * *'
+    - cron:  '01 13 * * *'
 
 jobs:
   zap_scan:
@@ -17,6 +17,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           target: 'https://www.zaproxy.org/'
-          docker_name: 'owasp/zap2docker-live'
+          docker_name: 'owasp/zap2docker-weekly'
           cmd_options: '-z "-config view.locale=fr_FR"'
           # locale: 'fr_FR'
